menu nav fonctionnel + footer sur toutes les pages ( corrigé et compatible à plusieurs sessions)

--- a/radeaudesanimaux.css
+++ b/radeaudesanimaux.css
@@ -90,7 +90,9 @@ footer a img{
     width: 100px;
     height: 100px;
 }
-
+.logo a img{
+    border-radius: 50%;
+}
 .reseauxsociaux img{
     width: 50px;
     height: auto;
