--- a/radeaudesanimaux.css
+++ b/radeaudesanimaux.css
@@ -32,12 +32,14 @@ nav ul li a {
     padding: 0.5rem 1rem;
     display: block;
     text-align: center;
+    min-width: 100px;
 }
 
 
 nav ul li ul.dropdown li{
     display: block;
 }
+
 nav ul li ul.dropdown {
     width: 100%;
     background-color: rgb(21, 21, 21);
@@ -45,9 +47,11 @@ nav ul li ul.dropdown {
     z-index: 999;
     display: none;
 }
+
 nav ul li ul.dropdown a{
     color: white;
 }
+
 nav ul li ul.dropdown a:hover{
     background-color: rgb(62, 62, 62);
 }
@@ -58,7 +62,25 @@ nav ul li a:hover{
 nav ul li:hover ul.dropdown{
     display: block;
 }
+/* Sous-menu 2 */
+nav ul li ul.sousmenu2 {
+    position: absolute;
+    left: 100%;   /* décale le sous-menu à droite du premier */
+    top: 0;
+    background-color: rgb(21, 21, 21);
+    display: none;
+    min-width: 100px;
+}
 
+/* Affiche le sous-sous-menu quand on survole l'élément parent */
+nav ul li ul.dropdown li:hover ul.sousmenu2 {
+    display: block;
+}
+
+
+nav ul li ul.sousmenu2 li a:hover {
+    background: rgb(62, 62, 62);
+}
 
 
 
