--- a/radeaudesanimaux.css
+++ b/radeaudesanimaux.css
@@ -626,12 +626,70 @@ body{
     align-items: center;
 }
 
+.famille_titre{
+    height: 300px;
+     background:
+        linear-gradient(
+            to right,
+            rgba(0, 0, 0, 1),
+            rgba(0, 0, 0, 0)
+        ),
+        url("images/rda (3).jpeg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: right center;    
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    color: white;
+}
+.famille_titre_texte{
+    max-width: 600px;
+    padding-left: 150px;
+    position: absolute;
+    top: 40%;
+    left: 50px;                 
+}
+.famille_texte{
+    text-align: center;
+}
 
+.grille-images {
+    padding: 10px 0;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 20px;
+}
+.carte {
+    position: relative;
+    aspect-ratio: 1 / 1;   
+    overflow: hidden;
+    background: #ccc;
+}
 
+.carte img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.overlay {
+    position: absolute;
+    inset: 0;
+    background: linear-gradient(
+        rgba(0,0,0,0),
+        rgba(0,0,0,1)
+    );
+    display: flex;
+    align-items: flex-end; /*mettre le titre en bas*/
+    padding: 15px;
+}
 
-
-
-
+.overlay h3 {
+    color: white;
+    margin: 0;
+    font-size: 1.5rem;
+    text-transform: uppercase;
+}
 
 
 /*___________________________________________________________________________________________________________________________*/
@@ -878,6 +936,7 @@ footer a img{
     }
     .perdu_texte{
         width: 90%;
+        text-align: center;
     }
     .perdu_img_textes{
         width: 100%;
@@ -893,4 +952,14 @@ footer a img{
         justify-content: center;
         align-items: center;
     }
+    .famille_titre_texte{
+        padding-left: 20px;
+        max-width: 50%;
+        top : 35%;
+    }
+    .grille-images {
+        grid-template-columns: repeat(2, 1fr);
+    }
+    
 }
+
