--- a/radeaudesanimaux.css
+++ b/radeaudesanimaux.css
@@ -762,6 +762,7 @@ body{
     left: 50px;                 
 }
 .qui_texte1{
+    margin-top: 45px;
     text-align: center;
 }
 .qui_texte1 h2,
@@ -782,6 +783,7 @@ body{
 .qui_texte3{
     text-align: center;
     background-color: rgb(168, 193, 193);
+    padding : 35px 20%;
 }
 .qui_animaux{
     display: flex;
@@ -828,13 +830,128 @@ body{
     text-align: center;
     padding: 20px 0;
 }
-
-
-
-
-
-
-
+.aide_titre{
+    height: 300px;
+     background:
+        linear-gradient(
+            to right,
+            rgba(0, 0, 0, 1),
+            rgba(0, 0, 0, 0)
+        ),
+        url("images/rda (9).jpeg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: right center;    
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    color: white;
+}
+.aide_titre_texte{
+    max-width: 600px;
+    padding-left: 150px;
+    position: absolute;
+    top: 40%;
+    left: 50px;                 
+}
+.picto_groupe{
+    width: 150px;
+}
+.aide_haut{
+    display: flex;
+}
+.aide_titre_texte_bas{
+    text-align: center;
+    background-color:rgb(168, 193, 193) ;
+    padding-top: 25px;
+    padding-bottom: 25px;
+}
+.aide_haut {
+    align-items: center;
+}
+.aide_img{
+    width: 40%;
+}
+.aide_img img{
+    width: 90%;
+    aspect-ratio: 1 / 1;
+    overflow: hidden;
+    object-fit: cover;
+}
+.aide_bloc p{
+    margin-top: 25px;
+}
+.aide_haut p{
+    padding: 25px;
+}
+.aide_haut strong{
+    color: rgb(255, 72, 0);
+}
+.aide_bloc h3{
+    color: rgb(255, 72, 0);
+}
+.aide_btn{
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+}
+.adopt_titre{
+    height: 300px;
+     background:
+        linear-gradient(
+            to right,
+            rgba(0, 0, 0, 1),
+            rgba(0, 0, 0, 0)
+        ),
+        url("images/zzz\ \(7\).jpeg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: right center;    
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    color: white;
+}
+.adopt_titre_texte{
+    max-width: 600px;
+    padding-left: 150px;
+    position: absolute;
+    top: 40%;
+    left: 50px;                 
+}
+.adopt_2column{
+    display: flex;
+    align-items: center;
+}
+.adopt_2column img{
+    width: 45%;
+    aspect-ratio: 1 / 1;
+    overflow: hidden;
+    object-fit: cover;
+    border-radius: 20px;
+}
+.adopt_2column p{
+    padding: 15px;
+    max-width: 50%;
+}
+.adopt_2column or{
+    color: rgb(255, 72, 0);
+}
+.adopt_text or{
+    color: rgb(255, 72, 0);
+}
+.adopt_text{
+    text-align: center;
+}
+.h2centre{
+    text-align: center;
+}
+.or{
+    color: rgb(255, 72, 0);
+}
+.adopt_img_large{
+    width: 60%;
+}
 
 /*___________________________________________________________________________________________________________________________*/
 /*Aide par Chat GPT pour le caroussel*/
@@ -1132,6 +1249,55 @@ footer a img{
     .qui_animaux{
         display: block;
     }
-
+    .qui_chat{
+        width: 100%;
+    }
+    .qui_chien{
+        width: 100%;
+        margin-top: 20px;
+    }
+    .qui_texte2{
+        display: block;
+    }
+    .qui_texte2 img{
+        width: 100%;
+    }
+    .qui_texte2 p{
+        margin-top: 10px;
+    }
+    .qui_texte3{
+        margin-top: 25px;
+    }
+    .aide_titre_texte{
+        padding-left: 20px;
+        max-width: 50%;
+        top : 35%;
+    }
+    .aide_haut{
+        display: block;
+    }
+    .aide_img{
+        width: 100%;
+    }
+    .aide_bloc p{
+        padding: 0 25px;
+    }
+    .aide_bloc h3{
+        padding: 0 25px
+    }
+    .adopt_titre_texte{
+        padding-left: 20px;
+        max-width: 50%;
+        top : 40%;
+    }
+    .adopt_2column{
+        display: block;
+    }
+    .adopt_2column img{
+        width: 100%;
+    }
+    .adopt_2column p{
+        max-width: 100%;
+    }
 }
 
