--- a/radeaudesanimaux.css
+++ b/radeaudesanimaux.css
@@ -1251,6 +1251,9 @@ footer a img{
     }
     .temoin_img_textes{
         width: 100%;
+        padding:0;
+    
+}
     }
     .temoin_img_textes img{
         width: 100%;
