--- a/radeaudesanimaux.css
+++ b/radeaudesanimaux.css
@@ -952,6 +952,61 @@ body{
 .adopt_img_large{
     width: 60%;
 }
+.contrat_titre{
+    height: 300px;
+     background:
+        linear-gradient(
+            to right,
+            rgba(0, 0, 0, 1),
+            rgba(0, 0, 0, 0)
+        ),
+        url("images/rda(39).webp");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: right center;    
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    color: white;
+}
+.contrat_titre_texte{
+    max-width: 600px;
+    padding-left: 150px;
+    position: absolute;
+    top: 40%;
+    left: 50px;                 
+}
+.contrat_texte1{
+     background:
+        linear-gradient(
+            to right,
+            rgba(0, 0, 0, 0.8),
+            rgba(0, 0, 0, 0.8)
+        ),
+        url("images/rda(32).webp");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: right center;    
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    color: white;
+    text-align: center;
+    padding: 20px 0;
+    background-attachment: fixed;
+}
+
+
+
+
+
+
+
+
+
+
+
+
 
 /*___________________________________________________________________________________________________________________________*/
 /*Aide par Chat GPT pour le caroussel*/
@@ -1315,6 +1370,14 @@ footer a img{
     }
     .adopt_2column p{
         max-width: 100%;
+    }
+    .adopt_img_large{
+        width: 95%;
+    }
+    .contrat_titre_texte{
+        padding-left: 20px;
+        max-width: 50%;
+        top : 40%;
     }
 }
 
